--- a/240902/240902_2_morph_dilate.ipynb
+++ b/240902/240902_2_morph_dilate.ipynb
@@ -21,7 +21,7 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "img = cv2.imread('./bbbbb.png')\n",
+    "img = cv2.imread('../data/img/bbb.png')\n",
     "\n",
     "# 구조화 요소 커널, 사각형 (3x3) 생성 ---①\n",
     "k = cv2.getStructuringElement(cv2.MORPH_RECT, (3,3))\n",
@@ -44,7 +44,7 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "img = cv2.imread('./bbbbb.png')\n",
+    "img = cv2.imread('../data/img/bbb.png')\n",
     "\n",
     "# 구조화 요소 커널, 사각형 (3x3) 생성 ---①\n",
     "k = cv2.getStructuringElement(cv2.MORPH_RECT, (3,3))\n",
@@ -67,7 +67,7 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "img = cv2.imread('./bbbbb.png')\n",
+    "img = cv2.imread('../data/img/bbb.png')\n",
     "\n",
     "# 구조화 요소 커널, 사각형 (3x3) 생성 ---①\n",
     "k = cv2.getStructuringElement(cv2.MORPH_RECT, (3,3))\n",
@@ -90,7 +90,7 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "file_name = './bbbbb.png'\n",
+    "file_name = '../data/img/bbb.png'\n",
     "img = cv2.imread(file_name)\n",
     "\n",
     "# blur() 함수로 블러링  ---①\n",
@@ -127,7 +127,7 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "img = cv2.imread('./bbbbb.png')\n",
+    "img = cv2.imread('../data/img/bbb.png')\n",
     "\n",
     "# 가우시안 커널을 직접 생성해서 블러링  ---①\n",
     "k1 = np.array([[1, 2, 1],\n",
