--- a/240903_yolo/240903_2_crop.ipynb
+++ b/240903_yolo/240903_2_crop.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:81, y:61, w:425, h:318\n",
-      "croped.\n"
+      "x:228, y:2, w:-380, h:211\n",
+      "좌측 상단에서 우측 하단으로 영역을 드래그 하세요.\n"
      ]
     }
    ],
@@ -48,14 +48,14 @@
     "                roi = img[y0:y0+h, x0:x0+w] # 원본 이미지에서 선택 영영만 ROI로 지정 ---⑥\n",
     "                cv2.imshow('cropped', roi)  # ROI 지정 영역을 새창으로 표시\n",
     "                cv2.moveWindow('cropped', 0, 0) # 새창을 화면 좌측 상단에 이동\n",
-    "                cv2.imwrite('../data/img/cropped.jpg', roi)   # ROI 영역만 파일로 저장 ---⑦\n",
+    "                cv2.imwrite('../data/img/xxx1.png', roi)   # ROI 영역만 파일로 저장 ---⑦\n",
     "                print(\"croped.\")\n",
     "            else:\n",
     "                cv2.imshow('img', img)  # 드래그 방향이 잘못된 경우 사각형 그림ㅇㅣ 없는 원본 이미지 출력\n",
     "                print(\"좌측 상단에서 우측 하단으로 영역을 드래그 하세요.\")\n",
     "\n",
     "# img = cv2.imread('./sunset.jpg')\n",
-    "img = cv2.imread('../data/img/pilot-1021_640.jpg')\n",
+    "img = cv2.imread('../data/img/xxx.jpg')\n",
     "cv2.imshow('img', img)\n",
     "cv2.setMouseCallback('img', onMouse) # 마우스 이벤트 등록 ---⑧\n",
     "cv2.waitKey()\n",
@@ -67,7 +67,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "\n",
+    "\n",
+    "argc = len(sys.argv)\n",
+    "if argc < 3:\n",
+    "    print('Usage: stitching.exe <image_file1> <image_file2> [<image_file3> ...]')\n",
+    "    sys.exit()\n",
+    "\n",
+    "imgs = []\n",
+    "for i in range(1, argc):\n",
+    "    img = cv2.imread(sys.argv[i])\n",
+    "\n",
+    "    if img is None:\n",
+    "        print('Image load failed!')\n",
+    "        sys.exit()\n",
+    "\n",
+    "    imgs.append(img)\n",
+    "\n",
+    "stitcher = cv2.Stitcher_create()\n",
+    "status, dst = stitcher.stitch(imgs)\n",
+    "\n",
+    "if status != cv2.Stitcher_OK:\n",
+    "    print('Error on stitching!')\n",
+    "    sys.exit()\n",
+    "\n",
+    "cv2.imwrite('result.jpg', dst)\n",
+    "\n",
+    "cv2.imshow('dst', dst)\n",
+    "cv2.waitKey()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
   }
  ],
  "metadata": {
