--- a/240906/240906_2.ipynb
+++ b/240906/240906_2.ipynb
@@ -339,9 +339,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Camera!!\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import glob\n",
@@ -442,21 +450,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'cv2' has no attribute 'TrackerCSRT_create'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 10\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcv2\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# 트랙커 객체 생성자 함수 리스트 ---①\u001b[39;00m\n\u001b[0;32m      4\u001b[0m trackers \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m      5\u001b[0m             cv2\u001b[38;5;241m.\u001b[39mTrackerMIL_create,\n\u001b[0;32m      6\u001b[0m             \u001b[38;5;66;03m# cv2.TrackerKCF_create,\u001b[39;00m\n\u001b[0;32m      7\u001b[0m             \u001b[38;5;66;03m#cv2.TrackerTLD_create,\u001b[39;00m\n\u001b[0;32m      8\u001b[0m             \u001b[38;5;66;03m#cv2.TrackerMedianFlow_create,\u001b[39;00m\n\u001b[0;32m      9\u001b[0m             cv2\u001b[38;5;241m.\u001b[39mTrackerGOTURN_create, \u001b[38;5;66;03m#버그로 오류 발생\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m             \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTrackerCSRT_create\u001b[49m,\n\u001b[0;32m     11\u001b[0m             cv2\u001b[38;5;241m.\u001b[39mTrackerDaSiamRPN_create,\n\u001b[0;32m     12\u001b[0m             \u001b[38;5;66;03m#cv2.TrackerMOSSE_create\u001b[39;00m\n\u001b[0;32m     13\u001b[0m             ]\n\u001b[0;32m     14\u001b[0m trackerIdx \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m  \u001b[38;5;66;03m# 트랙커 생성자 함수 선택 인덱스\u001b[39;00m\n\u001b[0;32m     15\u001b[0m tracker \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'cv2' has no attribute 'TrackerCSRT_create'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "\n",
