--- a/240905/240905_2_labeling.ipynb
+++ b/240905/240905_2_labeling.ipynb
@@ -108,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image load failed!\n"
+     ]
+    }
+   ],
    "source": [
     "def sobel_edge():\n",
     "    src = cv2.imread('../data/img/coins.jpg', cv2.IMREAD_GRAYSCALE)\n",
@@ -137,9 +145,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "src:\n",
+      "[[  0   0 255 255   0   0   0   0]\n",
+      " [255 255 255 255   0   0 255   0]\n",
+      " [255 255 255 255   0   0   0   0]\n",
+      " [  0   0   0   0   0 255 255   0]\n",
+      " [  0   0   0 255 255 255 255   0]\n",
+      " [  0   0   0 255   0   0 255   0]\n",
+      " [  0   0 255 255 255 255 255   0]\n",
+      " [  0   0   0   0   0   0   0   0]]\n",
+      "labels:\n",
+      "[[0 0 1 1 0 0 0 0]\n",
+      " [1 1 1 1 0 0 2 0]\n",
+      " [1 1 1 1 0 0 0 0]\n",
+      " [0 0 0 0 0 3 3 0]\n",
+      " [0 0 0 3 3 3 3 0]\n",
+      " [0 0 0 3 0 0 3 0]\n",
+      " [0 0 3 3 3 3 3 0]\n",
+      " [0 0 0 0 0 0 0 0]]\n",
+      "number of labels: 4\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import cv2\n",
