--- a/240905/240905_1_morphology.ipynb
+++ b/240905/240905_1_morphology.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image load failed!\n",
-      "Image load failed!\n",
-      "Image load failed!\n"
+      "src.shape: (923, 922, 3)\n",
+      "src.dtype: uint8\n",
+      "The pixel value [B, G, R] at (0, 0) is [214 231 237]\n"
      ]
     }
    ],
@@ -21,7 +21,7 @@
     "\n",
     "\n",
     "def color_op():\n",
-    "    src = cv2.imread('../data/img/candies.png', cv2.IMREAD_COLOR)\n",
+    "    src = cv2.imread('../data/img/coins.png', cv2.IMREAD_COLOR)\n",
     "\n",
     "    if src is None:\n",
     "        print('Image load failed!')\n",
@@ -35,7 +35,7 @@
     "\n",
     "\n",
     "def color_inverse():\n",
-    "    src = cv2.imread('../data/img/ccc.png', cv2.IMREAD_COLOR)\n",
+    "    src = cv2.imread('../data/img/coins.png', cv2.IMREAD_COLOR)\n",
     "\n",
     "    if src is None:\n",
     "        print('Image load failed!')\n",
@@ -59,7 +59,7 @@
     "\n",
     "\n",
     "def color_grayscale():\n",
-    "    src = cv2.imread('../data/img/candies.png', cv2.IMREAD_COLOR)\n",
+    "    src = cv2.imread('../data/img/coins.png', cv2.IMREAD_COLOR)\n",
     "\n",
     "    if src is None:\n",
     "        print('Image load failed!')\n",
@@ -74,7 +74,7 @@
     "\n",
     "\n",
     "def color_split():\n",
-    "    src = cv2.imread('../data/img/candies.png', cv2.IMREAD_COLOR)\n",
+    "    src = cv2.imread('../data/img/coins.png', cv2.IMREAD_COLOR)\n",
     "\n",
     "    if src is None:\n",
     "        print('Image load failed!')\n",
@@ -100,14 +100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Image load failed!\n"
+     "ename": "error",
+     "evalue": "OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:868: error: (-215:Assertion failed) trackbar in function 'cv::getTrackbarPos'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 7\u001b[0m, in \u001b[0;36mon_hue_changed\u001b[1;34m(_)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mon_hue_changed\u001b[39m(_\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m      6\u001b[0m     lower_hue \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mgetTrackbarPos(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLower Hue\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmask\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 7\u001b[0m     upper_hue \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetTrackbarPos\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mUpper Hue\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmask\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m     lowerb \u001b[38;5;241m=\u001b[39m (lower_hue, \u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     10\u001b[0m     upperb \u001b[38;5;241m=\u001b[39m (upper_hue, \u001b[38;5;241m255\u001b[39m, \u001b[38;5;241m255\u001b[39m)\n",
+      "\u001b[1;31merror\u001b[0m: OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:868: error: (-215:Assertion failed) trackbar in function 'cv::getTrackbarPos'\n"
      ]
     }
    ],
@@ -130,7 +134,7 @@
     "def main():\n",
     "    global src_hsv\n",
     "\n",
-    "    src = cv2.imread('../data/img/candies.png', cv2.IMREAD_COLOR)\n",
+    "    src = cv2.imread('../data/img/coins.png', cv2.IMREAD_COLOR)\n",
     "\n",
     "    if src is None:\n",
     "        print('Image load failed!')\n",
@@ -257,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -420,8 +424,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 31\u001b[0m\n\u001b[0;32m     28\u001b[0m     plt\u001b[38;5;241m.\u001b[39mshow()  \n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m: \n\u001b[1;32m---> 31\u001b[0m     \u001b[43mexec_clahe\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[8], line 21\u001b[0m, in \u001b[0;36mexec_clahe\u001b[1;34m()\u001b[0m\n\u001b[0;32m     18\u001b[0m img_clahe[:,:,\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m clahe\u001b[38;5;241m.\u001b[39mapply(img_clahe[:,:,\u001b[38;5;241m0\u001b[39m])           \u001b[38;5;66;03m#CLAHE 적용\u001b[39;00m\n\u001b[0;32m     19\u001b[0m img_clahe \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mcvtColor(img_clahe, cv2\u001b[38;5;241m.\u001b[39mCOLOR_YUV2BGR)\n\u001b[1;32m---> 21\u001b[0m _, src_bin \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mthreshold\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_clahe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m255\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTHRESH_BINARY\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m|\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTHRESH_OTSU\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     23\u001b[0m dst1 \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39merode(src_bin, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m     24\u001b[0m dst2 \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mdilate(src_bin, \u001b[38;5;28;01mNone\u001b[39;00m)  \n",
+      "Cell \u001b[1;32mIn[10], line 31\u001b[0m\n\u001b[0;32m     28\u001b[0m     plt\u001b[38;5;241m.\u001b[39mshow()  \n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m: \n\u001b[1;32m---> 31\u001b[0m     \u001b[43mexec_clahe\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[10], line 21\u001b[0m, in \u001b[0;36mexec_clahe\u001b[1;34m()\u001b[0m\n\u001b[0;32m     18\u001b[0m img_clahe[:,:,\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m clahe\u001b[38;5;241m.\u001b[39mapply(img_clahe[:,:,\u001b[38;5;241m0\u001b[39m])           \u001b[38;5;66;03m#CLAHE 적용\u001b[39;00m\n\u001b[0;32m     19\u001b[0m img_clahe \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mcvtColor(img_clahe, cv2\u001b[38;5;241m.\u001b[39mCOLOR_YUV2BGR)\n\u001b[1;32m---> 21\u001b[0m _, src_bin \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mthreshold\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_clahe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m255\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTHRESH_BINARY\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m|\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTHRESH_OTSU\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     23\u001b[0m dst1 \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39merode(src_bin, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m     24\u001b[0m dst2 \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mdilate(src_bin, \u001b[38;5;28;01mNone\u001b[39;00m)  \n",
       "\u001b[1;31merror\u001b[0m: OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\thresh.cpp:1559: error: (-2:Unspecified error) in function 'double __cdecl cv::threshold(const class cv::_InputArray &,const class cv::_OutputArray &,double,double,int)'\n> THRESH_OTSU mode:\n>     'src_type == CV_8UC1 || src_type == CV_16UC1'\n> where\n>     'src_type' is 16 (CV_8UC3)\n"
      ]
     }
