--- a/240903_yolo/240903_2_crop.ipynb
+++ b/240903_yolo/240903_2_crop.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:228, y:2, w:-380, h:211\n",
-      "좌측 상단에서 우측 하단으로 영역을 드래그 하세요.\n"
+      "x:145, y:154, w:94, h:63\n",
+      "croped.\n"
      ]
     }
    ],
@@ -48,14 +48,14 @@
     "                roi = img[y0:y0+h, x0:x0+w] # 원본 이미지에서 선택 영영만 ROI로 지정 ---⑥\n",
     "                cv2.imshow('cropped', roi)  # ROI 지정 영역을 새창으로 표시\n",
     "                cv2.moveWindow('cropped', 0, 0) # 새창을 화면 좌측 상단에 이동\n",
-    "                cv2.imwrite('../data/img/xxx1.png', roi)   # ROI 영역만 파일로 저장 ---⑦\n",
+    "                cv2.imwrite('../data/img/cropped.png', roi)   # ROI 영역만 파일로 저장 ---⑦\n",
     "                print(\"croped.\")\n",
     "            else:\n",
     "                cv2.imshow('img', img)  # 드래그 방향이 잘못된 경우 사각형 그림ㅇㅣ 없는 원본 이미지 출력\n",
     "                print(\"좌측 상단에서 우측 하단으로 영역을 드래그 하세요.\")\n",
     "\n",
     "# img = cv2.imread('./sunset.jpg')\n",
-    "img = cv2.imread('../data/img/xxx.jpg')\n",
+    "img = cv2.imread('../data/img/cpu.png')\n",
     "cv2.imshow('img', img)\n",
     "cv2.setMouseCallback('img', onMouse) # 마우스 이벤트 등록 ---⑧\n",
     "cv2.waitKey()\n",
