--- a/240904/240904_3.ipynb
+++ b/240904/240904_3.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m win_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mscanning\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      5\u001b[0m img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../data/img/tuna.png\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 6\u001b[0m rows, cols \u001b[38;5;241m=\u001b[39m \u001b[43mimg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m[:\u001b[38;5;241m2\u001b[39m]\n\u001b[0;32m      7\u001b[0m draw \u001b[38;5;241m=\u001b[39m img\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m      8\u001b[0m pts_cnt \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -64,7 +76,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m amp \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m15\u001b[39m    \u001b[38;5;66;03m# 진폭(amplitude)\u001b[39;00m\n\u001b[0;32m      7\u001b[0m img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/img/taekwonv1.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 8\u001b[0m rows, cols \u001b[38;5;241m=\u001b[39m \u001b[43mimg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m[:\u001b[38;5;241m2\u001b[39m]\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# 초기 매핑 배열 생성 ---①\u001b[39;00m\n\u001b[0;32m     11\u001b[0m mapy, mapx \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mindices((rows, cols),dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mfloat32)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -101,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,21 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 81\u001b[0m\n\u001b[0;32m     79\u001b[0m cv2\u001b[38;5;241m.\u001b[39mimshow(win_title, img)\n\u001b[0;32m     80\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m---> 81\u001b[0m     key \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwaitKey\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     82\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m key \u001b[38;5;241m&\u001b[39m \u001b[38;5;241m0xFF\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m27\u001b[39m:\n\u001b[0;32m     83\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -232,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +261,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 49\u001b[0m\n\u001b[0;32m     47\u001b[0m ret, frame \u001b[38;5;241m=\u001b[39m cap\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m     48\u001b[0m \u001b[38;5;66;03m# 준비한 매핑 좌표로 영상 효과 적용\u001b[39;00m\n\u001b[1;32m---> 49\u001b[0m mirrorh\u001b[38;5;241m=\u001b[39m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremap\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmap_mirrorh_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmap_mirrorh_y\u001b[49m\u001b[43m,\u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mINTER_LINEAR\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     50\u001b[0m mirrorv\u001b[38;5;241m=\u001b[39mcv2\u001b[38;5;241m.\u001b[39mremap(frame,map_mirrorv_x,map_mirrorv_y,cv2\u001b[38;5;241m.\u001b[39mINTER_LINEAR)\n\u001b[0;32m     51\u001b[0m wave \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mremap(frame,map_wave_x,map_wave_y,cv2\u001b[38;5;241m.\u001b[39mINTER_LINEAR, \\\n\u001b[0;32m     52\u001b[0m                 \u001b[38;5;28;01mNone\u001b[39;00m, cv2\u001b[38;5;241m.\u001b[39mBORDER_REPLICATE)\n",
+      "Cell \u001b[1;32mIn[2], line 49\u001b[0m\n\u001b[0;32m     47\u001b[0m ret, frame \u001b[38;5;241m=\u001b[39m cap\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m     48\u001b[0m \u001b[38;5;66;03m# 준비한 매핑 좌표로 영상 효과 적용\u001b[39;00m\n\u001b[1;32m---> 49\u001b[0m mirrorh\u001b[38;5;241m=\u001b[39m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremap\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmap_mirrorh_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmap_mirrorh_y\u001b[49m\u001b[43m,\u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mINTER_LINEAR\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     50\u001b[0m mirrorv\u001b[38;5;241m=\u001b[39mcv2\u001b[38;5;241m.\u001b[39mremap(frame,map_mirrorv_x,map_mirrorv_y,cv2\u001b[38;5;241m.\u001b[39mINTER_LINEAR)\n\u001b[0;32m     51\u001b[0m wave \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mremap(frame,map_wave_x,map_wave_y,cv2\u001b[38;5;241m.\u001b[39mINTER_LINEAR, \\\n\u001b[0;32m     52\u001b[0m                 \u001b[38;5;28;01mNone\u001b[39;00m, cv2\u001b[38;5;241m.\u001b[39mBORDER_REPLICATE)\n",
       "\u001b[1;31merror\u001b[0m: OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\imgwarp.cpp:695: error: (-215:Assertion failed) !ssize.empty() in function 'cv::remapBilinear'\n"
      ]
     }
@@ -323,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -423,14 +435,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "img = cv2.imread(\"../data/img/fff.jpg\")\n",
+    "img = cv2.imread(\"../data/img/fff.png\")\n",
     "\n",
     "# 미디언 블러 적용 --- ①\n",
     "blur = cv2.medianBlur(img, 5)\n",
@@ -444,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +476,7 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "img = cv2.imread('../data/img/fff.jpg')\n",
+    "img = cv2.imread('../data/img/fff.png')\n",
     "\n",
     "# 가우시안 커널을 직접 생성해서 블러링  ---①\n",
     "k1 = np.array([[1, 2, 1],\n",
@@ -490,14 +502,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "img = cv2.imread(\"../data/img/fff.jpg\")\n",
+    "img = cv2.imread(\"../data/img/fff.png\")\n",
     "\n",
     "# 가우시안 필터 적용 ---①\n",
     "blur1 = cv2.GaussianBlur(img, (5,5), 0)\n",
@@ -544,19 +556,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndexError",
-     "evalue": "index 862 is out of bounds for axis 0 with size 574",
+     "evalue": "index 564 is out of bounds for axis 0 with size 439",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 75\u001b[0m\n\u001b[0;32m     73\u001b[0m noise_gaussian()\n\u001b[0;32m     74\u001b[0m filter_bilateral()\n\u001b[1;32m---> 75\u001b[0m \u001b[43mfilter_median\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[3], line 60\u001b[0m, in \u001b[0;36mfilter_median\u001b[1;34m()\u001b[0m\n\u001b[0;32m     58\u001b[0m     x \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, src\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     59\u001b[0m     y \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, src\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m---> 60\u001b[0m     src[x, y] \u001b[38;5;241m=\u001b[39m (i \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m255\u001b[39m\n\u001b[0;32m     62\u001b[0m dst1 \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mGaussianBlur(src, (\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m), \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     63\u001b[0m dst2 \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mmedianBlur(src, \u001b[38;5;241m3\u001b[39m)\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 862 is out of bounds for axis 0 with size 574"
+      "Cell \u001b[1;32mIn[9], line 75\u001b[0m\n\u001b[0;32m     73\u001b[0m noise_gaussian()\n\u001b[0;32m     74\u001b[0m filter_bilateral()\n\u001b[1;32m---> 75\u001b[0m \u001b[43mfilter_median\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[9], line 60\u001b[0m, in \u001b[0;36mfilter_median\u001b[1;34m()\u001b[0m\n\u001b[0;32m     58\u001b[0m     x \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, src\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     59\u001b[0m     y \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, src\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m---> 60\u001b[0m     src[x, y] \u001b[38;5;241m=\u001b[39m (i \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m255\u001b[39m\n\u001b[0;32m     62\u001b[0m dst1 \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mGaussianBlur(src, (\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m), \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     63\u001b[0m dst2 \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mmedianBlur(src, \u001b[38;5;241m3\u001b[39m)\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 564 is out of bounds for axis 0 with size 439"
      ]
     }
    ],
@@ -647,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
