--- a/202409/240905_label/240905_2_labeling.ipynb
+++ b/202409/240905_label/240905_2_labeling.ipynb
@@ -2,35 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "src:\n",
-      "[[  0   0 255 255   0   0   0   0]\n",
-      " [255 255 255 255   0   0 255   0]\n",
-      " [255 255 255 255   0   0   0   0]\n",
-      " [  0   0   0   0   0 255 255   0]\n",
-      " [  0   0   0 255 255 255 255   0]\n",
-      " [  0   0   0 255   0   0 255   0]\n",
-      " [  0   0 255 255 255 255 255   0]\n",
-      " [  0   0   0   0   0   0   0   0]]\n",
-      "labels:\n",
-      "[[0 0 1 1 0 0 0 0]\n",
-      " [1 1 1 1 0 0 2 0]\n",
-      " [1 1 1 1 0 0 0 0]\n",
-      " [0 0 0 0 0 3 3 0]\n",
-      " [0 0 0 3 3 3 3 0]\n",
-      " [0 0 0 3 0 0 3 0]\n",
-      " [0 0 3 3 3 3 3 0]\n",
-      " [0 0 0 0 0 0 0 0]]\n",
-      "number of labels: 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import cv2\n",
@@ -71,7 +45,7 @@
     "\n",
     "\n",
     "def labeling_stats():\n",
-    "    src = cv2.imread('../data/img/bbb.png', cv2.IMREAD_GRAYSCALE)\n",
+    "    src = cv2.imread('../../data/img/bbb.png', cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "    if src is None:\n",
     "        print('Image load failed!')\n",
@@ -94,7 +68,7 @@
     "        pt2 = (x + w, y + h)\n",
     "        cv2.rectangle(dst, pt1, pt2, (0, 255, 255))\n",
     "\n",
-    "    cv2.imshow('src', src)\n",
+    "    # cv2.imshow('src', src)\n",
     "    cv2.imshow('dst', dst)\n",
     "\n",
     "    cv2.waitKey()\n",
@@ -102,7 +76,7 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    labeling_basic()\n",
+    "    #labeling_basic()\n",
     "    labeling_stats()\n"
    ]
   },
