--- a/202409/240905_label/240905_1_morphology.ipynb
+++ b/202409/240905_label/240905_1_morphology.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
    "source": [
     "def exec_clahe():\n",
     "    # img = cv2.imread('path_to_your_image.jpg')  # Make sure to use the correct path\n",
-    "    img = cv2.imread('../data/img/eee.png')\n",
+    "    img = cv2.imread('../../data/img/eee.png')\n",
     "    if img is None:\n",
     "        print('Image load failed!')\n",
     "        return\n",
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -424,8 +424,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 31\u001b[0m\n\u001b[0;32m     28\u001b[0m     plt\u001b[38;5;241m.\u001b[39mshow()  \n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m: \n\u001b[1;32m---> 31\u001b[0m     \u001b[43mexec_clahe\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[10], line 21\u001b[0m, in \u001b[0;36mexec_clahe\u001b[1;34m()\u001b[0m\n\u001b[0;32m     18\u001b[0m img_clahe[:,:,\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m clahe\u001b[38;5;241m.\u001b[39mapply(img_clahe[:,:,\u001b[38;5;241m0\u001b[39m])           \u001b[38;5;66;03m#CLAHE 적용\u001b[39;00m\n\u001b[0;32m     19\u001b[0m img_clahe \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mcvtColor(img_clahe, cv2\u001b[38;5;241m.\u001b[39mCOLOR_YUV2BGR)\n\u001b[1;32m---> 21\u001b[0m _, src_bin \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mthreshold\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_clahe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m255\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTHRESH_BINARY\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m|\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTHRESH_OTSU\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     23\u001b[0m dst1 \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39merode(src_bin, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m     24\u001b[0m dst2 \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mdilate(src_bin, \u001b[38;5;28;01mNone\u001b[39;00m)  \n",
+      "Cell \u001b[1;32mIn[7], line 31\u001b[0m\n\u001b[0;32m     28\u001b[0m     plt\u001b[38;5;241m.\u001b[39mshow()  \n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m: \n\u001b[1;32m---> 31\u001b[0m     \u001b[43mexec_clahe\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[7], line 21\u001b[0m, in \u001b[0;36mexec_clahe\u001b[1;34m()\u001b[0m\n\u001b[0;32m     18\u001b[0m img_clahe[:,:,\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m clahe\u001b[38;5;241m.\u001b[39mapply(img_clahe[:,:,\u001b[38;5;241m0\u001b[39m])           \u001b[38;5;66;03m#CLAHE 적용\u001b[39;00m\n\u001b[0;32m     19\u001b[0m img_clahe \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mcvtColor(img_clahe, cv2\u001b[38;5;241m.\u001b[39mCOLOR_YUV2BGR)\n\u001b[1;32m---> 21\u001b[0m _, src_bin \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mthreshold\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_clahe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m255\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTHRESH_BINARY\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m|\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTHRESH_OTSU\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     23\u001b[0m dst1 \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39merode(src_bin, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m     24\u001b[0m dst2 \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mdilate(src_bin, \u001b[38;5;28;01mNone\u001b[39;00m)  \n",
       "\u001b[1;31merror\u001b[0m: OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\thresh.cpp:1559: error: (-2:Unspecified error) in function 'double __cdecl cv::threshold(const class cv::_InputArray &,const class cv::_OutputArray &,double,double,int)'\n> THRESH_OTSU mode:\n>     'src_type == CV_8UC1 || src_type == CV_16UC1'\n> where\n>     'src_type' is 16 (CV_8UC3)\n"
      ]
     }
@@ -437,7 +437,7 @@
     " \n",
     "def exec_clahe():\n",
     "    #--①이미지 읽어서 YUV 컬러스페이스로 변경\n",
-    "    img = cv2.imread('../data/img/bbb.png')\n",
+    "    img = cv2.imread('../../data/img/bbb.png')\n",
     "    img_yuv = cv2.cvtColor(img, cv2.COLOR_BGR2YUV)\n",
     "\n",
     "    #--② 밝기 채널에 대해서 이퀄라이즈 적용\n",
